[package]
name = "assignment_tp061214"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduled-thread-pool = "0.2.7"
rand = "0.8.4"
crossbeam-channel = "0.5.11"
amiquip = "0.4"
serde = "=1.0.197"
serde_json = "1.0.114"
uuid = { version = "0.8", features = ["v4"] }
colored = "2.1.0"
prettytable = "0.10.0"